--- a/trunk/Obi/Obi/Dialogs/CheckUpdates.fr.resx
+++ b/trunk/Obi/Obi/Dialogs/CheckUpdates.fr.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,9 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-
-
-
+  <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <assembly alias="mscorlib" name="mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="m_RdOpenWebPage.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -135,7 +135,7 @@
     <value>2</value>
   </data>
   <data name="m_RdOpenWebPage.Text" xml:space="preserve">
-    <value>&amp;Aller sur la page web; plus d'information</value>
+    <value>&amp;Aller sur le site web; plus d'information</value>
   </data>
   <data name="&gt;&gt;m_RdOpenWebPage.Name" xml:space="preserve">
     <value>m_RdOpenWebPage</value>
@@ -162,7 +162,7 @@
     <value>3</value>
   </data>
   <data name="m_RdRemindLater.Text" xml:space="preserve">
-    <value>&amp;Rappeler ultérieurement</value>
+    <value>Me le &amp;rappeler ultérieurement</value>
   </data>
   <data name="&gt;&gt;m_RdRemindLater.Name" xml:space="preserve">
     <value>m_RdRemindLater</value>
@@ -189,7 +189,7 @@
     <value>4</value>
   </data>
   <data name="m_RdRemindForNextVersion.Text" xml:space="preserve">
-    <value>M'informer de la &amp;prochaine version, ignorer celle-ci</value>
+    <value>M'informer de la &amp;prochaine version disponible, ignorer celle-ci</value>
   </data>
   <data name="&gt;&gt;m_RdRemindForNextVersion.Name" xml:space="preserve">
     <value>m_RdRemindForNextVersion</value>
@@ -342,9 +342,6 @@
   <data name="&gt;&gt;mInfoTxtBox.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
-  <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
   <data name="$this.AccessibleName" xml:space="preserve">
     <value>Vérifier les mises à jour</value>
   </data>
@@ -355,7 +352,7 @@
     <value>397, 242</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>CheckUpdates</value>
+    <value>Vérifier les mises à jour</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>CheckUpdates</value>
