--- a/trunk/Obi/Obi/Dialogs/DownloadFile.fr.resx
+++ b/trunk/Obi/Obi/Dialogs/DownloadFile.fr.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="richTextBox1.Location" type="System.Drawing.Point, System.Drawing">
     <value>26, 31</value>
@@ -129,16 +132,16 @@
     <value>0</value>
   </data>
   <data name="richTextBox1.Text" xml:space="preserve">
-    <value>Pour coder en mp4, 3gp et amr, télécharger ffmpeg à partir du lien ci-dessous ou en cliquant sur le bouton "Download ffmpeg".
+    <value>Pour coder en mp4, 3gp et amr, télécharger ffmpeg depuis le lien ci-dessous ou en cliquant sur le bouton "Télécharger ffmpeg".
 http://www.daisy.org/obi/download
-Après téléchargement suivre les étapes ci-après :-
+Après téléchargement procédez comme suit:-
 
 1) Localiser le dossier Program Files sur le disque C.
 2) Localiser le dossier "The Urakawa Project" dans "Program files".
 3) Dans le dossier "The Urakawa Project" ouvrir le dossier "Obi x.x".
 4) Copier le fichier téléchargé "ffmpeg.exe" dans le dossier "Obi x.x"
 
-Vous pouvez aussi ouvrir le dossier "Obi x.x" en cliquant sur le bouton "Ouvrir le dossier Obi" et en y copiant le fichier "ffmpeg.exe".
+Vous pouvez aussi ouvrir le dossier "Obi x.x" en cliquant sur le bouton "Ouvrir le répertoire de Obi" et en y copiant le fichier "ffmpeg.exe".
 Attention : Ces fonctions sont pour les utilisateurs avancés, les livres DAISY/EPUB exportés peuvent ne pas être validés avec ces nouveaux formats.</value>
   </data>
   <data name="&gt;&gt;richTextBox1.Name" xml:space="preserve">
@@ -215,7 +218,7 @@ Attention : Ces fonctions sont pour les utilisateurs avancés, les livres DAISY/
     <value>1</value>
   </data>
   <data name="m_btnFolder.AccessibleName" xml:space="preserve">
-    <value>Ouvrir le dossier Obi</value>
+    <value>Ouvrir le répertoire de Obi</value>
   </data>
   <data name="m_btnFolder.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
@@ -230,7 +233,7 @@ Attention : Ces fonctions sont pour les utilisateurs avancés, les livres DAISY/
     <value>2</value>
   </data>
   <data name="m_btnFolder.Text" xml:space="preserve">
-    <value>&amp;Ouvrir le dossier Obi</value>
+    <value>&amp;Ouvrir le répertoire de Obi</value>
   </data>
   <data name="&gt;&gt;m_btnFolder.Name" xml:space="preserve">
     <value>m_btnFolder</value>
@@ -244,9 +247,6 @@ Attention : Ces fonctions sont pour les utilisateurs avancés, les livres DAISY/
   <data name="&gt;&gt;m_btnFolder.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
-  <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
     <value>6, 13</value>
   </data>
@@ -254,7 +254,7 @@ Attention : Ces fonctions sont pour les utilisateurs avancés, les livres DAISY/
     <value>415, 289</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>DownloadFile</value>
+    <value>Télécharger le fichier</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>DownloadFile</value>
