--- a/trunk/Obi/Obi/Dialogs/EditRoles.fr.resx
+++ b/trunk/Obi/Obi/Dialogs/EditRoles.fr.resx
@@ -334,7 +334,7 @@
     <value>3</value>
   </data>
   <data name="mRemove.Text" xml:space="preserve">
-    <value>&amp;Supprimer</value>
+    <value>&amp;Retirer</value>
   </data>
   <data name="&gt;&gt;mRemove.Name" xml:space="preserve">
     <value>mRemove</value>
