--- a/trunk/Obi/Obi/Dialogs/GoToPageOrPhrase.fr.resx
+++ b/trunk/Obi/Obi/Dialogs/GoToPageOrPhrase.fr.resx
@@ -174,7 +174,7 @@
     <value>5</value>
   </data>
   <data name="mCancelButton.Location" type="System.Drawing.Point, System.Drawing">
-    <value>198, 181</value>
+    <value>200, 190</value>
   </data>
   <data name="mCancelButton.TabIndex" type="System.Int32, mscorlib">
     <value>9</value>
@@ -274,7 +274,7 @@
     <value>Flat</value>
   </data>
   <data name="m_btnOk.Location" type="System.Drawing.Point, System.Drawing">
-    <value>90, 167</value>
+    <value>70, 150</value>
   </data>
   <data name="m_btnOk.Size" type="System.Drawing.Size, System.Drawing">
     <value>100, 28</value>
@@ -301,7 +301,7 @@
     <value>True</value>
   </data>
   <data name="m_radPage.Location" type="System.Drawing.Point, System.Drawing">
-    <value>165, 13</value>
+    <value>10, 38</value>
   </data>
   <data name="m_radPage.Size" type="System.Drawing.Size, System.Drawing">
     <value>107, 20</value>
@@ -328,7 +328,7 @@
     <value>True</value>
   </data>
   <data name="m_radPhrase.Location" type="System.Drawing.Point, System.Drawing">
-    <value>36, 11</value>
+    <value>10, 18</value>
   </data>
   <data name="m_radPhrase.Size" type="System.Drawing.Size, System.Drawing">
     <value>104, 20</value>
@@ -355,7 +355,7 @@
     <value>True</value>
   </data>
   <data name="m_radTime.Location" type="System.Drawing.Point, System.Drawing">
-    <value>42, 40</value>
+    <value>10, 58</value>
   </data>
   <data name="m_radTime.Size" type="System.Drawing.Size, System.Drawing">
     <value>57, 20</value>
@@ -364,7 +364,7 @@
     <value>1</value>
   </data>
   <data name="m_radTime.Text" xml:space="preserve">
-    <value>Temps</value>
+    <value>Durée</value>
   </data>
   <data name="&gt;&gt;m_radTime.Name" xml:space="preserve">
     <value>m_radTime</value>
@@ -403,7 +403,7 @@
     <value>15</value>
   </data>
   <data name="mPhraseIndexComboBox.Location" type="System.Drawing.Point, System.Drawing">
-    <value>189, 130</value>
+    <value>150, 93</value>
   </data>
   <data name="mPhraseIndexComboBox.Size" type="System.Drawing.Size, System.Drawing">
     <value>100, 24</value>
@@ -433,10 +433,10 @@
     <value>Section</value>
   </data>
   <data name="m_cb_TimeInPhraseOrSection.Items2" xml:space="preserve">
-    <value>Project</value>
+    <value>Projet</value>
   </data>
   <data name="m_cb_TimeInPhraseOrSection.Location" type="System.Drawing.Point, System.Drawing">
-    <value>188, 99</value>
+    <value>150, 91</value>
   </data>
   <data name="m_cb_TimeInPhraseOrSection.Size" type="System.Drawing.Size, System.Drawing">
     <value>121, 24</value>
@@ -457,10 +457,10 @@
     <value>13</value>
   </data>
   <data name="m_txtBox_TimeInSeconds.AccessibleName" xml:space="preserve">
-    <value>Time in seconds</value>
+    <value>Durée en secondes</value>
   </data>
   <data name="m_txtBox_TimeInSeconds.Location" type="System.Drawing.Point, System.Drawing">
-    <value>188, 131</value>
+    <value>150, 120</value>
   </data>
   <data name="m_txtBox_TimeInSeconds.Size" type="System.Drawing.Size, System.Drawing">
     <value>100, 22</value>
@@ -484,7 +484,7 @@
     <value>True</value>
   </data>
   <data name="m_lbl_Seconds.Location" type="System.Drawing.Point, System.Drawing">
-    <value>317, 139</value>
+    <value>255, 123</value>
   </data>
   <data name="m_lbl_Seconds.Size" type="System.Drawing.Size, System.Drawing">
     <value>60, 16</value>
@@ -493,7 +493,7 @@
     <value>6</value>
   </data>
   <data name="m_lbl_Seconds.Text" xml:space="preserve">
-    <value>seconds</value>
+    <value>secondes</value>
   </data>
   <data name="&gt;&gt;m_lbl_Seconds.Name" xml:space="preserve">
     <value>m_lbl_Seconds</value>
@@ -564,38 +564,11 @@
   <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
     <value>50, 96</value>
   </data>
-  <data name="m_btnOk.Location" type="System.Drawing.Point, System.Drawing">
-    <value>70, 150</value>
-  </data>
-  <data name="m_radPhrase.Location" type="System.Drawing.Point, System.Drawing">
-    <value>10, 18</value>
-  </data>
-  <data name="m_radPage.Location" type="System.Drawing.Point, System.Drawing">
-    <value>10, 38</value>
-  </data>
-  <data name="m_radTime.Location" type="System.Drawing.Point, System.Drawing">
-    <value>10, 58</value>
-  </data>
-  <data name="m_cb_TimeInPhraseOrSection.Location" type="System.Drawing.Point, System.Drawing">
-    <value>150, 91</value>
-  </data>
-  <data name="m_txtBox_TimeInSeconds.Location" type="System.Drawing.Point, System.Drawing">
-    <value>150, 120</value>
-  </data>
-  <data name="m_lbl_Seconds.Location" type="System.Drawing.Point, System.Drawing">
-    <value>255, 123</value>
-  </data>
   <data name="mNumberBox.Location" type="System.Drawing.Point, System.Drawing">
-    <value>150, 93</value>
-  </data>
-  <data name="mPhraseIndexComboBox.Location" type="System.Drawing.Point, System.Drawing">
     <value>150, 93</value>
   </data>
   <data name="mPageKindComboBox.Location" type="System.Drawing.Point, System.Drawing">
     <value>150, 120</value>
-  </data>
-  <data name="mCancelButton.Location" type="System.Drawing.Point, System.Drawing">
-    <value>200, 190</value>
   </data>
   <data name="label4.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -610,7 +583,7 @@
     <value>10</value>
   </data>
   <data name="label4.Text" xml:space="preserve">
-    <value>label4</value>
+    <value>Intitulé 4</value>
   </data>
   <data name="&gt;&gt;label4.Name" xml:space="preserve">
     <value>label4</value>
