--- a/trunk/Obi/Obi/Dialogs/MultipleOptionDialog.fr.resx
+++ b/trunk/Obi/Obi/Dialogs/MultipleOptionDialog.fr.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="helpProvider1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <assembly alias="mscorlib" name="mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="m_lbl_ChooseOption.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -132,7 +138,7 @@
     <value>0</value>
   </data>
   <data name="m_lbl_ChooseOption.Text" xml:space="preserve">
-    <value>Choisir une Option</value>
+    <value>Choisissez une Option</value>
   </data>
   <data name="&gt;&gt;m_lbl_ChooseOption.Name" xml:space="preserve">
     <value>m_lbl_ChooseOption</value>
@@ -159,7 +165,7 @@
     <value>1</value>
   </data>
   <data name="m_rdb_SaveBookmarkAndProject.Text" xml:space="preserve">
-    <value>Enregistrer le projet et le &amp;signet </value>
+    <value>Sauvegarder le projet et le &amp;signet </value>
   </data>
   <data name="&gt;&gt;m_rdb_SaveBookmarkAndProject.Name" xml:space="preserve">
     <value>m_rdb_SaveBookmarkAndProject</value>
@@ -186,7 +192,7 @@
     <value>3</value>
   </data>
   <data name="m_rdb_SaveProjectOnly.Text" xml:space="preserve">
-    <value>Enregistrer uniquement le &amp;projet</value>
+    <value>Sauvegarder uniquement le &amp;projet</value>
   </data>
   <data name="&gt;&gt;m_rdb_SaveProjectOnly.Name" xml:space="preserve">
     <value>m_rdb_SaveProjectOnly</value>
@@ -213,7 +219,7 @@
     <value>4</value>
   </data>
   <data name="m_rdb_DiscardBoth.Text" xml:space="preserve">
-    <value>&amp;Rien enregister</value>
+    <value>Ne &amp;Rien sauvegarder</value>
   </data>
   <data name="&gt;&gt;m_rdb_DiscardBoth.Name" xml:space="preserve">
     <value>m_rdb_DiscardBoth</value>
@@ -282,15 +288,9 @@
   <data name="&gt;&gt;m_btn_Cancel.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
-  <metadata name="helpProvider1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
   <data name="helpProvider1.HelpNamespace" xml:space="preserve">
     <value>Obi Help.fr.chm</value>
   </data>
-  <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
     <value>6, 13</value>
   </data>
@@ -304,7 +304,7 @@
     <value>309, 211</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>Slectionner l'option</value>
+    <value>Sélectionner l'option</value>
   </data>
   <data name="&gt;&gt;helpProvider1.Name" xml:space="preserve">
     <value>helpProvider1</value>
