--- a/trunk/Obi/Obi/Dialogs/ProfileDescription.fr.resx
+++ b/trunk/Obi/Obi/Dialogs/ProfileDescription.fr.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="m_ProfileDescription_WebBrowser.Location" type="System.Drawing.Point, System.Drawing">
     <value>0, 0</value>
@@ -174,11 +177,8 @@
   <data name="&gt;&gt;m_btnClose.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
-  <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
   <data name="$this.AccessibleName" xml:space="preserve">
-    <value>Description Profil Audio</value>
+    <value>Description du profil</value>
   </data>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
     <value>6, 13</value>
@@ -187,7 +187,7 @@
     <value>606, 517</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>Description Profil Audio</value>
+    <value>Description du profil</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>ProfileDescription</value>
