--- a/trunk/Obi/Obi/Dialogs/ProjectProperties.fr.resx
+++ b/trunk/Obi/Obi/Dialogs/ProjectProperties.fr.resx
@@ -163,13 +163,13 @@
     <value>Top, Left, Right</value>
   </data>
   <data name="m_txtDuration.Location" type="System.Drawing.Point, System.Drawing">
-    <value>130, 44</value>
+    <value>200, 44</value>
   </data>
   <data name="m_txtDuration.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 4, 4, 4</value>
   </data>
   <data name="m_txtDuration.Size" type="System.Drawing.Size, System.Drawing">
-    <value>296, 24</value>
+    <value>266, 24</value>
   </data>
   <data name="m_txtDuration.TabIndex" type="System.Int32, mscorlib">
     <value>5</value>
@@ -202,7 +202,7 @@
     <value>6</value>
   </data>
   <data name="m_lblSectionCount.Text" xml:space="preserve">
-    <value>Total &amp;sections:</value>
+    <value>Nombre total de &amp;sections:</value>
   </data>
   <data name="&gt;&gt;m_lblSectionCount.Name" xml:space="preserve">
     <value>m_lblSectionCount</value>
@@ -217,19 +217,19 @@
     <value>13</value>
   </data>
   <data name="m_txtSectionsCount.AccessibleName" xml:space="preserve">
-    <value>Total sections:</value>
+    <value>Nombre total de sections:</value>
   </data>
   <data name="m_txtSectionsCount.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Left, Right</value>
   </data>
   <data name="m_txtSectionsCount.Location" type="System.Drawing.Point, System.Drawing">
-    <value>130, 78</value>
+    <value>200, 78</value>
   </data>
   <data name="m_txtSectionsCount.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 4, 4, 4</value>
   </data>
   <data name="m_txtSectionsCount.Size" type="System.Drawing.Size, System.Drawing">
-    <value>296, 24</value>
+    <value>266, 24</value>
   </data>
   <data name="m_txtSectionsCount.TabIndex" type="System.Int32, mscorlib">
     <value>7</value>
@@ -262,7 +262,7 @@
     <value>10</value>
   </data>
   <data name="m_lblPhraseCount.Text" xml:space="preserve">
-    <value>Total p&amp;hrases:</value>
+    <value>Nombre total de p&amp;hrases:</value>
   </data>
   <data name="&gt;&gt;m_lblPhraseCount.Name" xml:space="preserve">
     <value>m_lblPhraseCount</value>
@@ -277,19 +277,19 @@
     <value>11</value>
   </data>
   <data name="m_txtPhraseCount.AccessibleName" xml:space="preserve">
-    <value>Total phrases:</value>
+    <value>Nombre total de phrases:</value>
   </data>
   <data name="m_txtPhraseCount.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Left, Right</value>
   </data>
   <data name="m_txtPhraseCount.Location" type="System.Drawing.Point, System.Drawing">
-    <value>130, 147</value>
+    <value>200, 147</value>
   </data>
   <data name="m_txtPhraseCount.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 4, 4, 4</value>
   </data>
   <data name="m_txtPhraseCount.Size" type="System.Drawing.Size, System.Drawing">
-    <value>296, 24</value>
+    <value>266, 24</value>
   </data>
   <data name="m_txtPhraseCount.TabIndex" type="System.Int32, mscorlib">
     <value>11</value>
@@ -322,7 +322,7 @@
     <value>12</value>
   </data>
   <data name="m_lblPageCount.Text" xml:space="preserve">
-    <value>Total pa&amp;ges:</value>
+    <value>Nombre total de pa&amp;ges:</value>
   </data>
   <data name="&gt;&gt;m_lblPageCount.Name" xml:space="preserve">
     <value>m_lblPageCount</value>
@@ -337,19 +337,19 @@
     <value>9</value>
   </data>
   <data name="m_txtPageCount.AccessibleName" xml:space="preserve">
-    <value>Total pages:</value>
+    <value>Nombre total de pages:</value>
   </data>
   <data name="m_txtPageCount.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Left, Right</value>
   </data>
   <data name="m_txtPageCount.Location" type="System.Drawing.Point, System.Drawing">
-    <value>130, 181</value>
+    <value>200, 181</value>
   </data>
   <data name="m_txtPageCount.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 4, 4, 4</value>
   </data>
   <data name="m_txtPageCount.Size" type="System.Drawing.Size, System.Drawing">
-    <value>296, 24</value>
+    <value>266, 24</value>
   </data>
   <data name="m_txtPageCount.TabIndex" type="System.Int32, mscorlib">
     <value>13</value>
@@ -439,13 +439,13 @@
     <value>Top, Left, Right</value>
   </data>
   <data name="m_txtTitle.Location" type="System.Drawing.Point, System.Drawing">
-    <value>130, 10</value>
+    <value>200, 10</value>
   </data>
   <data name="m_txtTitle.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 4, 4, 4</value>
   </data>
   <data name="m_txtTitle.Size" type="System.Drawing.Size, System.Drawing">
-    <value>296, 24</value>
+    <value>266, 24</value>
   </data>
   <data name="m_txtTitle.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
@@ -511,7 +511,7 @@
     <value>8</value>
   </data>
   <data name="m_lblMaxDepth.Text" xml:space="preserve">
-    <value>Profondeur &amp;Max:</value>
+    <value>Profondeur &amp;Maximum :</value>
   </data>
   <data name="&gt;&gt;m_lblMaxDepth.Name" xml:space="preserve">
     <value>m_lblMaxDepth</value>
@@ -526,13 +526,13 @@
     <value>3</value>
   </data>
   <data name="m_txtMaxDepth.AccessibleName" xml:space="preserve">
-    <value>Profondeur Max:</value>
+    <value>Profondeur Maximum :</value>
   </data>
   <data name="m_txtMaxDepth.Location" type="System.Drawing.Point, System.Drawing">
-    <value>130, 114</value>
+    <value>200, 114</value>
   </data>
   <data name="m_txtMaxDepth.Size" type="System.Drawing.Size, System.Drawing">
-    <value>296, 24</value>
+    <value>266, 24</value>
   </data>
   <data name="m_txtMaxDepth.TabIndex" type="System.Int32, mscorlib">
     <value>9</value>
@@ -562,7 +562,7 @@
     <value>14</value>
   </data>
   <data name="m_lblProjectFileCount.Text" xml:space="preserve">
-    <value>Project &amp;file Count:</value>
+    <value>Nombre de &amp;fichiers du projet:</value>
   </data>
   <data name="&gt;&gt;m_lblProjectFileCount.Name" xml:space="preserve">
     <value>m_lblProjectFileCount</value>
@@ -577,10 +577,10 @@
     <value>1</value>
   </data>
   <data name="m_txtProjectFileCount.Location" type="System.Drawing.Point, System.Drawing">
-    <value>130, 212</value>
+    <value>200, 212</value>
   </data>
   <data name="m_txtProjectFileCount.Size" type="System.Drawing.Size, System.Drawing">
-    <value>296, 24</value>
+    <value>266, 24</value>
   </data>
   <data name="m_txtProjectFileCount.TabIndex" type="System.Int32, mscorlib">
     <value>15</value>
@@ -601,7 +601,7 @@
     <value>9, 18</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>441, 299</value>
+    <value>481, 299</value>
   </data>
   <data name="$this.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft Sans Serif, 11pt</value>
