--- a/trunk/Obi/Obi/Dialogs/ReportDialog.fr.resx
+++ b/trunk/Obi/Obi/Dialogs/ReportDialog.fr.resx
@@ -124,7 +124,7 @@
     <value>True</value>
   </metadata>
   <data name="m_lbDetailsOfErrors.AccessibleName" xml:space="preserve">
-    <value>&amp;Détails description</value>
+    <value>Description des &amp;détails</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="m_lbDetailsOfErrors.Location" type="System.Drawing.Point, System.Drawing">
@@ -232,7 +232,7 @@
     <value>3</value>
   </data>
   <data name="m_lblReportDialog.Text" xml:space="preserve">
-    <value>label1</value>
+    <value>Intitulé n° 1</value>
   </data>
   <data name="m_lblReportDialog.Visible" type="System.Boolean, mscorlib">
     <value>False</value>
