--- a/trunk/Obi/Obi/Dialogs/SpecialPhraseList.fr.resx
+++ b/trunk/Obi/Obi/Dialogs/SpecialPhraseList.fr.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,11 +117,17 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="helpProvider1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <data name="m_grpSelectSpecialPhrases.AccessibleName" xml:space="preserve">
-    <value>Select special phrases to show in list box</value>
+    <value>Sélectionner les phrases spéciales à afficher dans la boîte de liste</value>
   </data>
   <data name="m_cb_SpecialPhrases.Items" xml:space="preserve">
-    <value>Phrases marquees AFAIRE</value>
+    <value>Phrases marquées comme ÀFAIRE</value>
   </data>
   <data name="m_cb_SpecialPhrases.Items1" xml:space="preserve">
     <value>Phrases vides</value>
@@ -136,16 +142,16 @@
     <value>Toutes les pages</value>
   </data>
   <data name="m_cb_SpecialPhrases.Items5" xml:space="preserve">
-    <value>Premières pages</value>
+    <value>Couverture</value>
   </data>
   <data name="m_cb_SpecialPhrases.Items6" xml:space="preserve">
-    <value>Pages normales</value>
+    <value>Pages standard</value>
   </data>
   <data name="m_cb_SpecialPhrases.Items7" xml:space="preserve">
     <value>Pages spéciales</value>
   </data>
   <data name="m_cb_SpecialPhrases.Items8" xml:space="preserve">
-    <value>Ancre</value>
+    <value>Appel</value>
   </data>
   <data name="m_cb_SpecialPhrases.Items9" xml:space="preserve">
     <value>Phrases inutilisées</value>
@@ -177,7 +183,7 @@
     <value>0</value>
   </data>
   <data name="m_btnFind.AccessibleName" xml:space="preserve">
-    <value>Find</value>
+    <value>Rechercher</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="m_btnFind.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
@@ -226,7 +232,7 @@
     <value>0</value>
   </data>
   <data name="m_grpSelectSpecialPhrases.Text" xml:space="preserve">
-    <value>Sélectionner les phrases spéciales à afficher</value>
+    <value>Sélectionner les phrases spéciales à afficher dans la boîte de liste</value>
   </data>
   <data name="&gt;&gt;m_grpSelectSpecialPhrases.Name" xml:space="preserve">
     <value>m_grpSelectSpecialPhrases</value>
@@ -298,7 +304,7 @@
     <value>2</value>
   </data>
   <data name="m_btnCancel.AccessibleName" xml:space="preserve">
-    <value>Cancel</value>
+    <value>Annuler</value>
   </data>
   <data name="m_btnCancel.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
@@ -364,7 +370,7 @@
     <value>0</value>
   </data>
   <data name="m_BtnStop.AccessibleName" xml:space="preserve">
-    <value>Stop</value>
+    <value>Arrêt</value>
   </data>
   <data name="m_BtnStop.Enabled" type="System.Boolean, mscorlib">
     <value>False</value>
@@ -394,7 +400,7 @@
     <value>1</value>
   </data>
   <data name="m_BtnPlay.AccessibleName" xml:space="preserve">
-    <value>Play</value>
+    <value>Lecture</value>
   </data>
   <data name="m_BtnPlay.Enabled" type="System.Boolean, mscorlib">
     <value>False</value>
@@ -436,7 +442,7 @@
     <value>2</value>
   </data>
   <data name="mgrp_PlayPhraseInListBox.Text" xml:space="preserve">
-    <value>Lire la phrase sélectionnée</value>
+    <value>Lire la phrase sélectionnée dans la boîte de liste</value>
   </data>
   <data name="&gt;&gt;mgrp_PlayPhraseInListBox.Name" xml:space="preserve">
     <value>mgrp_PlayPhraseInListBox</value>
@@ -450,15 +456,9 @@
   <data name="&gt;&gt;mgrp_PlayPhraseInListBox.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
-  <metadata name="helpProvider1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
   <data name="helpProvider1.HelpNamespace" xml:space="preserve">
     <value>Obi Help.chm</value>
   </data>
-  <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
     <value>6, 13</value>
   </data>
@@ -466,7 +466,7 @@
     <value>423, 493</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>SpecialPhraseList</value>
+    <value>Liste des phrases spéciales</value>
   </data>
   <data name="&gt;&gt;helpProvider1.Name" xml:space="preserve">
     <value>helpProvider1</value>
